[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Prefabs/ProjectCanvas/ProjectCanvas.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Projects/AreaCollision/AreaCollision.gd" type="Script" id=2]
[ext_resource path="res://src/Projects/AreaCollision/AreaCollisionCharacter.tscn" type="PackedScene" id=3]

[node name="AreaCollision" type="Node2D"]
script = ExtResource( 2 )

[node name="ProjectCanvas" parent="." instance=ExtResource( 1 )]
PROJECT_NAME = "Area Collision"

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Enemies" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
